--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(code)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(BookStore_SiriusNEO main.cpp bookstore.h bookstore.cpp blocklist.h blocklist.cpp usermanager.h usermanager.cpp)
+add_executable(code main.cpp bookstore.h bookstore.cpp blocklist.h blocklist.cpp usermanager.h usermanager.cpp)
